results/SVCOMP/specgen/log-StringValueOf08-2024_03_03_08_28_41.txt
public class StringValueOf08 {
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> tmp.equals("2.50");
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf08.java:3: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("2.50");
                             ^
  symbol:   variable tmp
  location: class StringValueOf08
1 error

public class StringValueOf08 {
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> String.valueOf(Float.parseFloat(arg)).equals("2.50");
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun BL_18825_then_3638__A2 () Bool (= |_JML__tmp3866| true)) java.io.IOException: Stream closed")
1 error

public class StringValueOf08 {
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> String.valueOf(Float.parseFloat(arg)).equals("2.50");
    public static boolean f(String arg) {
        float floatValue = Float.parseFloat(arg);
        String tmp = String.valueOf(floatValue);
        return tmp.equals("2.50");
    }
}

